--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
         "editorGroup.border": "#1accff",
         "tab.activeBorder": "#1accff"
     },
-    "peacock.color": "#00b3e6"
+    "peacock.color": "#00b3e6",
+    "cSpell.enabled": true
 }
