add readme and shunkakinoki title

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "SHUNMIND",
         "TICKTICK",
         "ZENHUB",
-        "cupertino"
+        "cupertino",
+        "shunkakinoki"
     ]
 }
