--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Set up Ruby
       uses: actions/setup-ruby@master
       with:
-        version: 2.6
+        ruby-version: 2.6
         
     - name: Set up bundler
       run: gem install bundler
