change to correct format

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,19 +1,15 @@
-name: Mark stale issues and pull requests
-
+name: Mark Stale Issues and Pull Requests
 on:
   schedule:
-  - cron: "0 3 * * *"
-
+    - cron: "0 3 * * *"
 jobs:
   stale:
-
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/stale@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Stale issue message'
-        stale-pr-message: 'Stale pull request message'
-        stale-issue-label: 'no-issue-activity'
-        stale-pr-label: 'no-pr-activity'
+      - uses: actions/stale@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          stale-issue-message: "Stale Issue Message"
+          stale-pr-message: "Stale Pull Request Message"
+          stale-issue-label: "no-issue-activity"
+          stale-pr-label: "no-pr-activity"
