added 201910 to wiki

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "cSpell.enabled": true,
     "cSpell.words": [
         "GAMEPLAN",
+        "Habitbook",
         "SHUNBLOG",
         "SHUNMIND",
         "TICKTICK",
