--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Upload Release Notes to Wiki
+        uses: awact/wiki-action@master
         env:
           ACTION_MAIL: shunkakinoki@gmail.com
           ACTION_NAME: shunkakinoki
