added proper codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
 * @shunkakinoki
 
-Gemfile.lock @dependabot[bot] @dependabot-preview[bot]
+Gemfile @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
+Gemfile.lock @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
