--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,5 @@
 * @shunkakinoki
 
+/.github/workflows/ @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
 Gemfile @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
 Gemfile.lock @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
