added proper codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,5 @@
 /.github/workflows/ @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
 Gemfile @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
 Gemfile.lock @shunkakinoki @dependabot[bot] @dependabot-preview[bot]
+
+/src/ @shunkakinoki @github-actions[bot]
