--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,4 +1,12 @@
 pull_request_rules:
+  - name: Automatic Merge for shunkakinoki Pull Requests
+    conditions:
+      - author=shunkakinoki
+      - status-success=WIP
+    actions:
+      merge:
+        method: merge
+
   - name: Automatic Merge for gitHub-actions[bot] Pull Requests
     conditions:
       - author=github-actions[bot]
