--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "cSpell.words": [
         "GAMEPLAN",
         "Habitbook",
+        "Kakinoki",
         "SHUNBLOG",
         "SHUNMIND",
         "TICKTICK",
