--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "workbench.colorCustomizations": {
+        "activityBar.background": "#1accff",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#df00ad",
+        "activityBarBadge.foreground": "#e7e7e7",
         "titleBar.activeBackground": "#00b3e6",
         "titleBar.inactiveBackground": "#00b3e699",
         "titleBar.activeForeground": "#15202b",
@@ -13,6 +18,7 @@
     "cSpell.enabled": true,
     "cSpell.words": [
         "GAMEPLAN",
+        "Goalsheet",
         "Habitbook",
         "Kakinoki",
         "SHUNBLOG",
