--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -1,6 +1,11 @@
 name: Run Markdown Lint
 on:
   push:
+    branches:
+      - master
+    paths:
+      - "**.md"
+  pull_request:
     paths:
       - "**.md"
 jobs:
