--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -1,12 +1,9 @@
 name: Run Markdown Lint
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - "**.md"
   pull_request:
     paths:
+      - "Gemfile"
+      - "Gemfile.lock"
       - "**.md"
 jobs:
   build:
@@ -17,12 +14,13 @@ jobs:
         uses: actions/setup-ruby@master
         with:
           ruby-version: 2.6
-
-      - name: Set Up Bundler
-        run: gem install bundler
-
-      - name: Install with bundle
-        run: bundle install
-
-      - name: Lint with Markdown
-        run: bundle exec mdl -s style.rb -wg .
+      - name: Set Up Markdown with Bundler
+        run: |
+          gem install bundler
+          bundle install
+          bundle exec mdl -s style.rb -wg .
+      - name: Label on PR
+        uses: awact/label-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ADD_LABEL: "gha-markdown"
