--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "Goalsheet",
         "Habitbook",
         "Kakinoki",
+        "Pieco",
         "SHUNBLOG",
         "SHUNMIND",
         "TICKTICK",
