--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
         "Goalsheet",
         "Habitbook",
         "Kakinoki",
+        "MEGURO",
+        "METRICSHEET",
         "Pieco",
         "SHUNBLOG",
         "SHUNMIND",
