--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,8 +2,7 @@ pull_request_rules:
   - name: Automatic Merge for shunkakinoki Pull Requests
     conditions:
       - author=shunkakinoki
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
@@ -14,8 +13,7 @@ pull_request_rules:
   - name: Automatic Merge for gitHub-actions[bot] Pull Requests
     conditions:
       - author=github-actions[bot]
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
@@ -26,8 +24,7 @@ pull_request_rules:
   - name: Automatic Merge for dependabot[bot] Pull Requests
     conditions:
       - author=dependabot[bot]
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
@@ -38,8 +35,7 @@ pull_request_rules:
   - name: Automatic Merge for dependabot-preview[bot] Pull Requests
     conditions:
       - author=dependabot-preview[bot]
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
