--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,8 @@ pull_request_rules:
   - name: Automatic Merge for shunkakinoki Pull Requests
     conditions:
       - author=shunkakinoki
-      - base=master
+      - label=gha-markdown
+      - status-success=WIP
     actions:
       delete_head_branch:
         force: true
@@ -13,7 +14,8 @@ pull_request_rules:
   - name: Automatic Merge for gitHub-actions[bot] Pull Requests
     conditions:
       - author=github-actions[bot]
-      - base=master
+      - label=gha-markdown
+      - status-success=WIP
     actions:
       delete_head_branch:
         force: true
@@ -24,7 +26,8 @@ pull_request_rules:
   - name: Automatic Merge for dependabot[bot] Pull Requests
     conditions:
       - author=dependabot[bot]
-      - base=master
+      - label=gha-markdown
+      - status-success=WIP
     actions:
       delete_head_branch:
         force: true
@@ -35,7 +38,8 @@ pull_request_rules:
   - name: Automatic Merge for dependabot-preview[bot] Pull Requests
     conditions:
       - author=dependabot-preview[bot]
-      - base=master
+      - label=gha-markdown
+      - status-success=WIP
     actions:
       delete_head_branch:
         force: true
