--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -10,3 +10,5 @@ update_configs:
   - package_manager: "github_actions"
     directory: "."
     update_schedule: "daily"
+    default_reviewers:
+    - shunkakinoki
