--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -23,7 +23,7 @@ jobs:
           ruby-version: 2.6
       - name: Cache bundler
         id: cache
-        uses: actions/cache@preview
+        uses: actions/cache@v1
         with:
           path: vendor/bundle
           key: gem-${{ hashFiles('**/Gemfile.lock') }}
@@ -32,8 +32,8 @@ jobs:
       - name: Install dependencies with bundler
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          gem install bundler
-          bundle install --deployment
+          gem install bundler --no-document
+          bundle install --jobs 4 --retry 3 --deployment
       - name: Run Markdown Lint
         run: |
           bundle exec mdl -s style.rb -wg .
