--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -25,7 +25,7 @@ jobs:
         id: cache
         uses: actions/cache@v1
         with:
-          path: vendor/bundle
+          path: ./vendor/bundle
           key: gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             gem-
