--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -30,7 +30,7 @@ jobs:
           restore-keys: |
             gem-
       - name: Install dependencies with bundler
-        if: steps.cache.outputs.cache-hit != 'true'
+        # if: steps.cache.outputs.cache-hit != 'true'
         run: |
           gem install bundler --no-document
           bundle install --jobs 4 --retry 3 --deployment
