--- a/.mergify/config.yml
+++ b/.mergify/config.yml
@@ -1,9 +1,7 @@
 pull_request_rules:
   - name: Automatic Merge for shunkakinoki Pull Requests
     conditions:
-      - author=shunkakinoki
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
@@ -13,9 +11,7 @@ pull_request_rules:
 
   - name: Automatic Merge for gitHub-actions[bot] Pull Requests
     conditions:
-      - author=github-actions[bot]
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
@@ -25,9 +21,7 @@ pull_request_rules:
 
   - name: Automatic Merge for dependabot[bot] Pull Requests
     conditions:
-      - author=dependabot[bot]
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
@@ -37,9 +31,7 @@ pull_request_rules:
 
   - name: Automatic Merge for dependabot-preview[bot] Pull Requests
     conditions:
-      - author=dependabot-preview[bot]
-      - label=gha-markdown
-      - status-success=WIP
+      - base=master
     actions:
       delete_head_branch:
         force: true
