--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -21,6 +21,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           gem install bundler --no-document
+          bundle config path ./vendor/bundle
           bundle install --jobs 4 --retry 3 --deployment
       - name: Run Markdown Lint
         run: |
