--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -1,5 +1,11 @@
 name: Markdown
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    paths:
+      - '**'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,6 +24,7 @@ jobs:
           restore-keys: |
             gem-
       - name: Install dependencies with bundler
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           gem install bundler --no-document
           bundle config path ./vendor/bundle
