reformat gha push

--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -1,11 +1,5 @@
 name: Markdown
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    paths:
-      - '**'
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
