fin wiki streaks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,10 +22,12 @@
         "GAMEPLAN",
         "Goalsheet",
         "Habitbook",
+        "Kaggle",
         "Kakinoki",
         "MEGURO",
         "METRICSHEET",
         "Pieco",
+        "Pomodoro",
         "SHUNBLOG",
         "SHUNMIND",
         "TICKTICK",
