--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "DEVELOPNISM",
         "GAMEPLAN",
         "Goalsheet",
+        "HABITIFY",
         "Habitbook",
         "Kaggle",
         "Kakinoki",
