--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "cSpell.enabled": true,
     "cSpell.words": [
         "DEVELOPNISM",
+        "Daigo",
         "GAMEPLAN",
         "Goalsheet",
         "HABITIFY",
