update readme png

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
         "ZENHUB",
         "atcoder",
         "cupertino",
+        "forthebadge",
         "hackerrank",
         "leetcode",
         "shunkakinoki"
