--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "Kakinoki",
         "MEGURO",
         "METRICSHEET",
+        "MIYAKE",
         "Pieco",
         "Pomodoro",
         "SHIBUYA",
