--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "cSpell.words": [
         "Andreessen",
         "DEVELOPNISM",
+        "DEVOPS",
         "Daigo",
         "GAMEPLAN",
         "Goalsheet",
