--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "peacock.color": "#00b3e6",
     "cSpell.enabled": true,
     "cSpell.words": [
+        "AWSCOST",
         "Andreessen",
         "BIZGALAXY",
         "DEVELOPNISM",
