finish streak wiki

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "SHIBUYA",
         "SHUNMIND",
         "TICKTICK",
+        "Youtube",
         "ZENHUB",
         "atcoder",
         "cupertino",
