--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -4,9 +4,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Set up Ruby
-        uses: actions/setup-ruby@master
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: '2.x'
       - name: Install bundler
@@ -21,7 +21,7 @@ jobs:
           restore-keys: |
             gem-
       - name: Install dependencies with bundler
-        # if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3 --deployment
