--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -21,7 +21,7 @@ jobs:
           restore-keys: |
             gem-
       - name: Install dependencies with bundler
-        # if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'false'
         run: |
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3 --deployment
