--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Set up Ruby
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: '2.x'
+          ruby-version: "2.x"
       - name: Install bundler
         run: |
           gem install bundler
@@ -21,7 +21,7 @@ jobs:
           restore-keys: |
             gem-
       - name: Install dependencies with bundler
-        if: steps.cache.outputs.cache-hit != 'true'
+        # if: steps.cache.outputs.cache-hit != 'true'
         run: |
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3 --deployment
