--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "Habitbook",
         "Kaggle",
         "Kakinoki",
+        "LIFEOPS",
         "MEGURO",
         "METRICSHEET",
         "MIYAKE",
