--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "DEVELOPNISM",
         "DEVOPS",
         "Daigo",
+        "Elon",
         "GAMEPLAN",
         "Goalsheet",
         "HABITIFY",
