--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -1,12 +1,15 @@
 version: 1
-
 update_configs:
+  - package_manager: "javascript"
+    directory: "."
+    update_schedule: "live"
+    default_reviewers:
+    - shunkakinoki
   - package_manager: "ruby:bundler"
     directory: "."
     update_schedule: "live"
     default_reviewers:
     - shunkakinoki
-
   - package_manager: "github_actions"
     directory: "."
     update_schedule: "daily"
