--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -27,4 +27,4 @@ jobs:
           bundle install --jobs 4 --retry 3 --deployment
       - name: Run Markdown Lint
         run: |
-          bundle exec mdl -s style.rb -wg psycho src wiki
+          bundle exec mdl -s style.rb -w psycho src wiki
