--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/shunkakinoki/shunkakinoki.git"
   },
   "scripts": {
+    "commit": "npx git-cz",
     "test": "yarn run lint && yarn run release-test",
     "release": "semantic-release",
     "release-test": "semantic-release -d",
