--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/shunkakinoki/shunkakinoki.git"
   },
   "scripts": {
+    "cm": "npx git-cz",
     "commit": "npx git-cz",
     "test": "yarn run lint && yarn run release-test",
     "release": "semantic-release",
@@ -19,7 +20,9 @@
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/exec": "^5.0.0",
+    "commitizen": "^4.0.3",
     "eclint": "^2.8.1",
+    "git-cz": "^4.3.1",
     "semantic-release": "^17.0.4"
   }
 }
