--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "cm": "npx git-cz",
     "commit": "npx git-cz",
-    "test": "yarn run lint && yarn run release-test",
+    "test": "yarn lint && yarn release-test",
     "release": "semantic-release",
     "release-test": "semantic-release -d",
     "lint": "eclint check $(git ls-files)",
