--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/shunkakinoki/shunkakinoki.git"
   },
   "scripts": {
-    "cm": "npx git-cz",
-    "commit": "npx git-cz",
+    "cm": "git-cz",
+    "commit": "git-cz",
     "test": "yarn lint && yarn release-test",
     "release": "semantic-release",
     "release-test": "semantic-release -d",
@@ -18,11 +18,19 @@
     "fix": "eclint fix $(git ls-files)"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/exec": "^5.0.0",
     "commitizen": "^4.0.3",
     "eclint": "^2.8.1",
     "git-cz": "^4.3.1",
+    "husky": "^4.2.3",
     "semantic-release": "^17.0.4"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
