--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "fix": "eclint fix $(git ls-files)"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/exec": "^5.0.0",
     "commitizen": "^4.0.3",
@@ -30,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "prepare-commit-msg": "exec < /dev/tty && git-cz --hook || true"
     }
   }
 }
