--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "Pomodoro",
         "SHIBUYA",
         "SHUNMIND",
+        "SIMPLENOTE",
         "TICKTICK",
         "Youtube",
         "ZENHUB",
