--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -18,6 +18,15 @@ update_configs:
       include_scope: true
     default_reviewers:
       - shunkakinoki
+  - package_manager: "rust:cargo"
+    directory: "."
+    update_schedule: "live"
+    commit_message:
+      prefix: "fix"
+      prefix_development: "chore"
+      include_scope: true
+    default_reviewers:
+      - shunkakinoki
   - package_manager: "github_actions"
     directory: "."
     update_schedule: "daily"
