--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,20 +9,28 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - name: Cache cargo
-        id: cache
+      - name: Cache cargo registry
         uses: actions/cache@v1
         with:
-          path: ~/.cargo
-          key: rust-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            rust-
-      - uses: actions-rs/cargo@v1
+          path: ~/.cargo/registry
+          key: rust-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+      - name: Cache cargo index
+        uses: actions/cache@v1
+        with:
+          path: ~/.cargo/git
+          key: rust-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+      - name: Cache cargo build
+        uses: actions/cache@v1
+        with:
+          path: target
+          key: rust-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
       - name: Install rust dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           rustup component add clippy
-          cargo update
+      - name: Run cargo update
+        uses: actions-rs/cargo@v1
+        with:
+          command: update
       - name: Run cargo check
         uses: actions-rs/cargo@v1
         with:
