--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,14 @@ include = ["shunkakinoki/**/*", "Cargo.toml"]
 name = "shunkakinoki"
 path = "shunkakinoki/main.rs"
 
+[[test]]
+name = "shunkakinoki"
+path = "shunkakinoki/tests/main.rs"
+
 [dependencies]
 clap = "2.33.0"
+self_update = "0.13"
 webbrowser = "0.5.2"
-self_update = "0.13.0"
 
 [dev-dependencies]
 version-sync = "0.8"
