--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "Goalsheet",
         "HABITIFY",
         "Habitbook",
+        "KOKORO",
         "Kaggle",
         "Kakinoki",
         "LIFEOPS",
