--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,8 @@
         "Goalsheet",
         "HABITIFY",
         "Habitbook",
+        "INAMORI",
+        "KAZUO",
         "KOKORO",
         "Kaggle",
         "Kakinoki",
