--- a/.prettierignore
+++ b/.prettierignore
@@ -1,16 +1,1 @@
-# Ignore everything:
-/*
-
-# Except these root files:
-!CONTRIBUTING.md
-!LICENSE
-!README.md
-
-# Except these sources for the www workspace
-!/www/content
-!/www/public
-!/www/static
-!/www/gatsby-config.js
-
-# Ignore nothing for the theme workspace
-!/@narative
+.gitignore
