--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ jobs:
           override: true
       - name: Chmod cargo registry
         run: |
-          chmod -R a+rwx ~/.cargo/registry
+          sudo chmod -R a+rwx ~/.cargo/registry
       - name: Cache cargo registry
         uses: actions/cache@v1
         with:
