feat: 🎸 init-march-2020
initiate march journal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,11 +28,13 @@
         "Elon",
         "GAMEPLAN",
         "Goalsheet",
+        "HABITIFICATION",
         "HABITIFY",
         "Habitbook",
         "INAMORI",
         "KAZUO",
         "KOKORO",
+        "KUBEFLOW",
         "Kaggle",
         "Kakinoki",
         "LIFEOPS",
