--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,60 +1,64 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#1accff",
-        "activityBar.activeBorder": "#df00ad",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#df00ad",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "titleBar.activeBackground": "#00b3e6",
-        "titleBar.inactiveBackground": "#00b3e699",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveForeground": "#15202b99",
-        "panel.border": "#1accff",
-        "sideBar.border": "#1accff",
-        "editorGroup.border": "#1accff",
-        "tab.activeBorder": "#1accff"
-    },
-    "peacock.color": "#00b3e6",
-    "editor.wordWrap": "on",
-    "cSpell.enabled": true,
-    "cSpell.words": [
-        "AWSCOST",
-        "Andreessen",
-        "BIZGALAXY",
-        "DEVELOPNISM",
-        "DEVOPS",
-        "Daigo",
-        "Elon",
-        "GAMEPLAN",
-        "Goalsheet",
-        "HABITIFICATION",
-        "HABITIFY",
-        "Habitbook",
-        "INAMORI",
-        "KAZUO",
-        "KOKORO",
-        "KUBEFLOW",
-        "Kaggle",
-        "Kakinoki",
-        "LIFEOPS",
-        "MEGURO",
-        "METRICSHEET",
-        "MIYAKE",
-        "Pieco",
-        "Pomodoro",
-        "SHIBUYA",
-        "SHUNMIND",
-        "SIMPLENOTE",
-        "TICKTICK",
-        "Youtube",
-        "ZENHUB",
-        "atcoder",
-        "cupertino",
-        "forthebadge",
-        "hackerrank",
-        "leetcode",
-        "novela",
-        "shunkakinoki"
-    ],
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#1accff",
+    "activityBar.activeBorder": "#df00ad",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#df00ad",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "titleBar.activeBackground": "#00b3e6",
+    "titleBar.inactiveBackground": "#00b3e699",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveForeground": "#15202b99",
+    "panel.border": "#1accff",
+    "sideBar.border": "#1accff",
+    "editorGroup.border": "#1accff",
+    "tab.activeBorder": "#1accff"
+  },
+  "peacock.color": "#00b3e6",
+  "editor.wordWrap": "on",
+  "cSpell.enabled": true,
+  "cSpell.words": [
+    "AWSCOST",
+    "Andreessen",
+    "BIZGALAXY",
+    "DEVELOPNISM",
+    "DEVOPS",
+    "Daigo",
+    "Elon",
+    "GAMEPLAN",
+    "Goalsheet",
+    "HABITIFICATION",
+    "HABITIFY",
+    "Habitbook",
+    "INAMORI",
+    "KAZUO",
+    "KOKORO",
+    "KUBEFLOW",
+    "Kaggle",
+    "Kakinoki",
+    "LIFEOPS",
+    "MEGURO",
+    "METRICSHEET",
+    "MIYAKE",
+    "Parens",
+    "Pieco",
+    "Pomodoro",
+    "SHIBUYA",
+    "SHUNMIND",
+    "SIMPLENOTE",
+    "TICKTICK",
+    "Youtube",
+    "ZENHUB",
+    "atcoder",
+    "cupertino",
+    "eclint",
+    "forthebadge",
+    "hackerrank",
+    "leetcode",
+    "mailchimp",
+    "narative",
+    "novela",
+    "shunkakinoki"
+  ]
 }
