--- a/.editorconfig
+++ b/.editorconfig
@@ -6,12 +6,11 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.yml]
 indent_size = 2
+quote_type = double
 
 [*.rb]
 indent_size = 4
 
-[*.md]
-indent_size = 2
+[*.lock]
+indent_size = unset
