--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,16 @@
 {
-  "printWidth": 80,
-  "tabWidth": 2,
-  "useTabs": false,
-  "singleQuote": true,
-  "trailingComma": "all",
+  "arrowParens": "avoid",
   "bracketSpacing": false,
+  "htmlWhitespaceSensitivity": "strict",
+  "insertPragma": false,
   "jsxBracketSameLine": false,
-  "proseWrap": "always"
+  "jsxSingleQuote": false,
+  "printWidth": 80,
+  "proseWrap": "never",
+  "requirePragma": false,
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
