--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "test": "yarn lint && yarn release-test",
     "release": "semantic-release",
     "release-test": "semantic-release -d",
-    "lint": "yarn eclint-check",
-    "fix": "yarn eclint-fix",
+    "lint": "yarn eclint-check && yarn prettier-check",
+    "fix": "yarn eclint-fix && yarn prettier-fix",
     "eclint-check": "eclint check $(git ls-files)",
-    "eclint-fix": "eclint fix $(git ls-files)"
+    "eclint-fix": "eclint fix $(git ls-files)",
+    "prettier-check": "prettier --check \"**/*.{js,jsx,json,ts,tsx,css,html,yml,yaml,scss,sass}\"",
+    "prettier-fix": "prettier --write \"**/*.{js,jsx,json,ts,tsx,css,html,yml,yaml,scss,sass}\""
   },
   "dependencies": {
     "@narative/gatsby-theme-novela": "^0.*",
