--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,8 @@ jobs:
         run: |
           yarn run build
       - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          CLEAN: true
-          FOLDER: public
+          github_token: ${{ secrets.ACCESS_TOKEN }}
+          force_orphan: true
+          publish_dir: public
